--- a/ForeScore.WebMVC/Views/Post/Comment.cshtml
+++ b/ForeScore.WebMVC/Views/Post/Comment.cshtml
@@ -19,7 +19,7 @@
             <div class="col-lg-12">
                 <div class="panel panel-primary">
                     <div class="panel-heading">Post Information</div>
-                    <div class="panel-body form-horizontal">
+                    <div class="panel-body panel-primary form-horizontal">
                         <div class="form-group">
                             @Html.LabelFor(model => model.PostDetail.Title, htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
@@ -61,7 +61,7 @@
                 <div class="col-lg-12">
                     <div class="panel panel-primary">
                         <div class="panel-heading">Course Information</div>
-                        <div class="panel-body">
+                        <div class="panel-body panel-primary">
                             <div class="col-lg-6">
                                 <dl class="dl-horizontal">
 
@@ -143,7 +143,7 @@
                 <div class="col-lg-12">
                     <div class="panel panel-primary">
                         <div class="panel-heading">Front Nine</div>
-                        <div class="panel-body">
+                        <div class="panel-body panel-primary">
                             <table class="table table-bordered table-striped">
                                 <thead>
                                     <tr>
@@ -271,7 +271,7 @@
                 <div class="col-lg-12">
                     <div class="panel panel-primary">
                         <div class="panel-heading">Back Nine</div>
-                        <div class="panel-body">
+                        <div class="panel-body panel-primary">
                             <table class="table table-bordered table-striped">
                                 <thead>
                                     <tr>
@@ -419,7 +419,7 @@
             <div class="col-lg-12">
                 <div class="panel panel-primary">
                     <div class="panel-heading">Add A Comment</div>
-                    <div class="panel-body form-horizontal">
+                    <div class="panel-body panel-primary form-horizontal">
                         <div class="form-group">
                             @Html.LabelFor(model => model.Content, htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
@@ -436,13 +436,13 @@
             <div class="col-lg-12">
                 <div class="panel panel-primary">
                     <div class="panel-heading">Comments</div>
-                    <div class="panel-body">
+                    <div class="panel-body panel-primary">
                         @foreach (var comment in Model.PostDetail.Comments)
                         {
                             <div class="col-lg-10">
                                 <div class="panel panel-primary">
                                     <div class="panel-heading">@(String.Format("{0}", comment.Name))</div>
-                                    <div class="panel-body">
+                                    <div class="panel-body panel-primary">
                                         <div class="col-lg-12">
                                             <table class="table">
                                                 <tr>
