--- a/ForeScore.WebMVC/Views/Post/CommentDelete.cshtml
+++ b/ForeScore.WebMVC/Views/Post/CommentDelete.cshtml
@@ -21,7 +21,7 @@
             <div class="col-lg-12">
                 <div class="panel panel-primary">
                     <div class="panel-heading">Post Information</div>
-                    <div class="panel-body form-horizontal">
+                    <div class="panel-body panel-primary form-horizontal">
                         <div class="form-group">
                             @Html.LabelFor(model => model.PostDetail.Title, htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
@@ -61,7 +61,7 @@
                 <div class="col-lg-12">
                     <div class="panel panel-primary">
                         <div class="panel-heading">Course Information</div>
-                        <div class="panel-body">
+                        <div class="panel-body panel-primary">
                             <div class="col-lg-6">
                                 <dl class="dl-horizontal">
 
@@ -146,7 +146,7 @@
                 <div class="col-lg-12">
                     <div class="panel panel-primary">
                         <div class="panel-heading">Front Nine</div>
-                        <div class="panel-body">
+                        <div class="panel-body panel-primary">
                             <table class="table table-bordered table-striped">
                                 <thead>
                                     <tr>
@@ -264,7 +264,7 @@
                 <div class="col-lg-12">
                     <div class="panel panel-primary">
                         <div class="panel-heading">Back Nine</div>
-                        <div class="panel-body">
+                        <div class="panel-body panel-primary">
                             <table class="table table-bordered table-striped">
                                 <thead>
                                     <tr>
@@ -396,9 +396,9 @@
         <br />
         <div class="row">
             <div class="col-lg-12">
-                <div class="panel panel-danger">
+                <div class="panel panel-primary">
                     <div class="panel-heading">Your Comment</div>
-                    <div class="panel-body form-horizontal">
+                    <div class="panel-body panel-primary form-horizontal">
                         <div class="form-group">
                             @Html.LabelFor(model => model.Content, htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
@@ -415,14 +415,14 @@
             <div class="col-lg-12">
                 <div class="panel panel-primary">
                     <div class="panel-heading">Comments</div>
-                    <div class="panel-body">
+                    <div class="panel-body panel-primary">
                         @foreach (var comment in Model.PostDetail.Comments)
                         {
                             <div class="col-lg-10">
                                 <div class="panel panel-primary">
                                     <div class="panel-heading">@(String.Format("{0}", comment.Name))</div>
 
-                                    <div class="panel-body">
+                                    <div class="panel-body panel-primary">
                                         <table>
                                             <tr>
                                                 <td>@Html.DisplayFor(model => comment.Content, new { htmlAttributes = new { @class = "form-control", } })</td>
