--- a/ForeScore.WebMVC/Views/Post/CreatePost.cshtml
+++ b/ForeScore.WebMVC/Views/Post/CreatePost.cshtml
@@ -36,7 +36,7 @@
             <div class="col-lg-12">
                 <div class="panel panel-primary">
                     <div class="panel-heading">Post Information</div>
-                    <div class="panel-body form-horizontal">
+                    <div class="panel-body panel-primary form-horizontal">
                         <div class="form-group">
                             @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
@@ -76,7 +76,7 @@
                 <div class="col-lg-12">
                     <div class="panel panel-primary">
                         <div class="panel-heading">Course Information</div>
-                        <div class="panel-body">
+                        <div class="panel-body panel-primary">
                             <div class="col-lg-6">
                                 <dl class="dl-horizontal">
 
@@ -161,7 +161,7 @@
                 <div class="col-lg-12">
                     <div class="panel panel-primary">
                         <div class="panel-heading">Front Nine</div>
-                        <div class="panel-body">
+                        <div class="panel-body panel-primary">
                             <table class="table table-bordered table-striped">
                                 <thead>
                                     <tr>
@@ -289,7 +289,7 @@
                 <div class="col-lg-12">
                     <div class="panel panel-primary">
                         <div class="panel-heading">Back Nine</div>
-                        <div class="panel-body">
+                        <div class="panel-body panel-primary">
                             <table class="table table-bordered table-striped">
                                 <thead>
                                     <tr>
