--- a/ForeScore.WebMVC/Views/Post/Delete.cshtml
+++ b/ForeScore.WebMVC/Views/Post/Delete.cshtml
@@ -14,7 +14,7 @@
         <br />
         <div class="row">
             <div class="col-lg-5">
-                <a href="@Url.Action("Index", "Post")"
+                <a href="@Url.Action("Details", "Post", new { id = Model.PostId })"
                    class="btn btn-block btn-info col-lg-2">
                     Discard Post Delete
                 </a>
@@ -28,12 +28,13 @@
         </div>
         <br />
 
+        @Html.HiddenFor(model=> Model.PostId)
 
         <div class="row">
             <div class="col-lg-12">
-                <div class="panel panel-danger">
+                <div class="panel panel-primary">
                     <div class="panel-heading">Post Information</div>
-                    <div class="panel-body form-horizontal">
+                    <div class="panel-body panel-primary form-horizontal">
                         <div class="form-group">
                             @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
@@ -74,7 +75,7 @@
                 <div class="col-lg-12">
                     <div class="panel panel-primary">
                         <div class="panel-heading">Course Information</div>
-                        <div class="panel-body">
+                        <div class="panel-body panel-primary">
                             <div class="col-lg-6">
                                 <dl class="dl-horizontal">
 
@@ -159,7 +160,7 @@
                 <div class="col-lg-12">
                     <div class="panel panel-primary">
                         <div class="panel-heading">Front Nine</div>
-                        <div class="panel-body">
+                        <div class="panel-body panel-primary">
                             <table class="table table-bordered table-striped">
                                 <thead>
                                     <tr>
@@ -287,7 +288,7 @@
                 <div class="col-lg-12">
                     <div class="panel panel-primary">
                         <div class="panel-heading">Back Nine</div>
-                        <div class="panel-body">
+                        <div class="panel-body panel-primary">
                             <table class="table table-bordered table-striped">
                                 <thead>
                                     <tr>
@@ -418,7 +419,7 @@
             <div class="col-lg-12">
                 <div class="panel panel-primary">
                     <div class="panel-heading">Comments</div>
-                    <div class="panel-body">
+                    <div class="panel-body panel-primary">
                         @foreach (var comment in Model.Comments)
                         {
                             <div class="col-lg-10">
