--- a/ForeScore.WebMVC/Views/Post/Details.cshtml
+++ b/ForeScore.WebMVC/Views/Post/Details.cshtml
@@ -90,7 +90,7 @@
             <div class="col-lg-12">
                 <div class="panel panel-primary">
                     <div class="panel-heading">Course Information</div>
-                    <div class="panel-body">
+                    <div class="panel-body panel-primary">
                         <div class="col-lg-6">
                             <dl class="dl-horizontal">
 
@@ -175,7 +175,7 @@
             <div class="col-lg-12">
                 <div class="panel panel-primary">
                     <div class="panel-heading">Front Nine</div>
-                    <div class="panel-body">
+                    <div class="panel-body panel-primary">
                         <table class="table table-bordered table-striped">
                             <thead>
                                 <tr>
@@ -303,7 +303,7 @@
             <div class="col-lg-12">
                 <div class="panel panel-primary">
                     <div class="panel-heading">Back Nine</div>
-                    <div class="panel-body">
+                    <div class="panel-body panel-primary">
                         <table class="table table-bordered table-striped">
                             <thead>
                                 <tr>
@@ -443,7 +443,7 @@
         <div class="col-lg-12">
             <div class="panel panel-primary">
                 <div class="panel-heading">Comments</div>
-                <div class="panel-body">
+                <div class="panel-body panel-primary">
                     @foreach (var comment in Model.Comments)
                     {
                         <div class="col-lg-1"></div>
