--- a/ForeScore.WebMVC/Views/Post/Edit.cshtml
+++ b/ForeScore.WebMVC/Views/Post/Edit.cshtml
@@ -22,7 +22,7 @@
 
         <div class="row">
             <div class="col-lg-5">
-                <a href="@Url.Action("Index", "Post")"
+                <a href="@Url.Action("Details", "Post", new { id = Model.PostId })"
                    class="btn btn-block btn-info col-lg-2">
                     Discard Post Edit
                 </a>
@@ -41,7 +41,7 @@
 
         <div class="row">
             <div class="col-lg-12">
-                <div class="panel panel-warning">
+                <div class="panel panel-primary">
                     <div class="panel-heading">Post Information</div>
                     <div class="panel-body form-horizontal">
                         <div class="form-group">
@@ -83,7 +83,7 @@
                 <div class="col-lg-12">
                     <div class="panel panel-primary">
                         <div class="panel-heading">Course Information</div>
-                        <div class="panel-body">
+                        <div class="panel-body panel-primary">
                             <div class="col-lg-6">
                                 <dl class="dl-horizontal">
 
@@ -168,7 +168,7 @@
                 <div class="col-lg-12">
                     <div class="panel panel-primary">
                         <div class="panel-heading">Front Nine</div>
-                        <div class="panel-body">
+                        <div class="panel-body panel-primary">
                             <table class="table table-bordered table-striped">
                                 <thead>
                                     <tr>
@@ -296,7 +296,7 @@
                 <div class="col-lg-12">
                     <div class="panel panel-primary">
                         <div class="panel-heading">Back Nine</div>
-                        <div class="panel-body">
+                        <div class="panel-body panel-primary">
                             <table class="table table-bordered table-striped">
                                 <thead>
                                     <tr>
