--- a/ForeScore.WebMVC/Views/Post/SelectRound.cshtml
+++ b/ForeScore.WebMVC/Views/Post/SelectRound.cshtml
@@ -13,30 +13,23 @@
     <div class="row">
 
 
-        <div class="col-lg-3">
+        <div class="col-lg-5">
             <a href="@Url.Action("Index", "Post")"
                class="btn btn-block btn-info">
                 Post Index
             </a>
         </div>
 
-        <div class="col-lg-1"></div>
 
-        <div class="col-lg-3">
+        <div class="col-lg-2"></div>
+
+        <div class="col-lg-5">
             <a href="@Url.Action("Index", "Round")"
                class="btn btn-block btn-warning">
                 Round Index
             </a>
         </div>
 
-        <div class="col-lg-1"></div>
-
-        <div class="col-lg-3">
-            <a href="@Url.Action("CreatePost", "Post", new { id = Model.NullRound })"
-               class="btn btn-block btn-success">
-                Create A Post Without A Round
-            </a>
-        </div>
 
     </div>
     <br />
@@ -44,9 +37,9 @@
     <br />
     <div class="row">
         <div class="col-lg-12">
-            <div class="panel panel-default">
+            <div class="panel panel-primary">
                 <div class="panel-heading">Your Public Rounds</div>
-                <div class="panel-body panel-default ">
+                <div class="panel-body panel-primary ">
                     <table class="table table-bordered table-striped">
                         <thead>
                             <tr>
@@ -82,14 +75,24 @@
                                         @Html.DisplayFor(modelItem => item.Score)
                                     </td>
                                     <td>
-                                        @Html.DisplayFor(modelItem => item.IsFeatured)
+                                        @if (item.IsFeatured == true)
+                                        {
+                                            <span class="green glyphicon glyphicon-ok"></span>
+                                        }
+                                        @if (item.IsFeatured == false)
+                                        {
+                                            <span class="red glyphicon glyphicon-remove"></span>
+                                        }
                                     </td>
                                     <td>
                                         @Html.DisplayFor(modelItem => item.DateOfRound)
                                     </td>
 
                                     <td>
-                                        @Html.ActionLink("Post This Round", "CreatePost", new { id = item.RoundId })
+                                        <a href="@Url.Action("CreatePost", "Post", new { id = item.RoundId})"
+                                           class="btn btn-block btn-success">
+                                            Post This Round
+                                        </a>
                                     </td>
                                 </tr>
                             }
