--- a/ForeScore.WebMVC/Views/TeeTime/Delete.cshtml
+++ b/ForeScore.WebMVC/Views/TeeTime/Delete.cshtml
@@ -4,45 +4,137 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>TeeTimeDetail</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        @Html.HiddenFor(model => model.TeeTimeId)
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
 
-        <dd>
-            @Html.DisplayFor(model => model.CourseName)
-        </dd>
+    <div class="container">
+        <h2>Delete Tee Time</h2>
 
-        <dd>@Html.DisplayFor(model => model.CourseDetail.Address)</dd>
+        <br />
+        <div class="row">
 
-        <dd>@Html.DisplayFor(model => model.CourseDetail.City)</dd>
+            <div class="col-lg-5">
+                <a href="@Url.Action("Details", "TeeTime", new { id = Model.TeeTimeId})"
+                   class="btn btn-block btn-info">
+                    Discard Tee Time Delete
+                </a>
+            </div>
 
-        <dd>@Html.DisplayFor(model => model.CourseDetail.StateOfResidence)</dd>
+            <div class="col-lg-2"></div>
 
-        <dd>@Html.DisplayFor(model => model.CourseDetail.PhoneNumber)</dd>
-
-        <dd>@Html.DisplayFor(model => model.CourseDetail.EmailAddress)</dd>
-
-        <dd>@Html.DisplayFor(model => model.CourseDetail.Website)</dd>
-
-
-        <dd>
-            @Html.DisplayFor(model => model.DateOfTeeTime)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm())
-    {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <div class="col-lg-5">
+                <button type="submit" value="Delete" class="btn btn-block btn-danger col-lg-2">Delete Tee Time</button>
+            </div>
         </div>
-    }
-</div>
+
+        <br />
+
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="panel panel-primary">
+                    <div class="panel-heading">Course Information</div>
+                    <div class="panel-body">
+                        <div class="col-lg-6">
+                            <dl class="dl-horizontal">
+
+                                @Html.HiddenFor(model => model.CourseDetail.Name)
+                                @Html.HiddenFor(model => model.CourseDetail.CourseId)
+                                @Html.HiddenFor(model => model.CourseId)
+
+                                <dt>
+                                    Course Name:
+                                </dt>
+
+                                <dd>
+                                    @Html.DisplayFor(model => model.CourseDetail.Name)
+                                </dd>
+
+                                <dt>
+                                    @Html.DisplayNameFor(model => model.CourseDetail.Par):
+                                </dt>
+
+                                <dd>
+                                    @Html.DisplayFor(model => model.CourseDetail.Par)
+                                </dd>
+
+                                <dt>
+                                    @Html.DisplayNameFor(model => model.CourseDetail.Slope):
+                                </dt>
+
+                                <dd>
+                                    @Html.DisplayFor(model => model.CourseDetail.Slope)
+                                </dd>
+
+                                <dt>
+                                    @Html.DisplayNameFor(model => model.CourseDetail.Rating):
+                                </dt>
+
+                                <dd>
+                                    @Html.DisplayFor(model => model.CourseDetail.Rating)
+                                </dd>
+                            </dl>
+                        </div>
+                        <div class="col-lg-6">
+                            <dl class="dl-horizontal">
+                                <dt>
+                                    @Html.DisplayNameFor(model => model.CourseDetail.Address):
+                                </dt>
+
+                                <dd>
+                                    @Html.DisplayFor(model => model.CourseDetail.Address)
+                                </dd>
+
+                                <dt>
+                                    @Html.DisplayNameFor(model => model.CourseDetail.City):
+                                </dt>
+
+                                <dd>
+                                    @Html.DisplayFor(model => model.CourseDetail.City)
+                                </dd>
+
+                                <dt>
+                                    @Html.DisplayNameFor(model => model.CourseDetail.StateOfResidence):
+                                </dt>
+
+                                <dd>
+                                    @Html.DisplayFor(model => model.CourseDetail.StateOfResidence)
+                                </dd>
+
+                                <dt>
+                                    @Html.DisplayNameFor(model => model.CourseDetail.ZipCode):
+                                </dt>
+
+                                <dd>
+                                    @Html.DisplayFor(model => model.CourseDetail.ZipCode)
+                                </dd>
+                            </dl>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <br />
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="panel panel-primary">
+                    <div class="panel-heading">Date Of Tee Time</div>
+                    <div class="panel-body">
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.DateOfTeeTime, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-10">
+                                @Html.DisplayFor(model => model.DateOfTeeTime, new { htmlAttributes = new { @class = "datetimepicker" } })
+                                @Html.ValidationMessageFor(model => model.DateOfTeeTime, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+}
+
