--- a/ForeScore.WebMVC/Views/Follow/Details.cshtml
+++ b/ForeScore.WebMVC/Views/Follow/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ForeScore.Models.UserCareerModels.UserCareerViewModel
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Details";
 }
 
 <div class="container">
@@ -119,7 +119,7 @@
 
         <div class="col-lg-4">
             <div class="panel panel-primary">
-                <div class="panel-heading">Featured Rounds</div>
+                <div class="panel-heading">@String.Format("{0}'s Featured Rounds", Model.FullName)</div>
                 <div class="panel-body">
                     <table class="table table-bordered table-striped">
                         <thead>
@@ -153,7 +153,7 @@
 
         <div class="col-lg-4">
             <div class="panel panel-primary">
-                <div class="panel-heading">Recent Posts</div>
+                <div class="panel-heading">@String.Format("{0}'s Recent Posts", Model.FullName)</div>
                 <div class="panel-body">
                     <table class="table table-bordered table-striped">
                         <thead>
@@ -170,7 +170,7 @@
                                     <td>@Html.DisplayFor(model => item.Title)</td>
                                     <td>@Html.DisplayFor(model => item.Content)</td>
                                     <td>
-                                        <a href="@Url.Action("Details", "Post", new { id = item.PostId})"
+                                        <a href="@Url.Action("Comment", "Post", new { id = item.PostId})"
                                            class="btn btn-block btn-warning">
                                             Details
                                         </a>
@@ -186,7 +186,7 @@
 
         <div class="col-lg-4">
             <div class="panel panel-primary">
-                <div class="panel-heading">Recent Followings</div>
+                <div class="panel-heading">@String.Format("{0}'s Recent Followings", Model.FullName)</div>
                 <div class="panel-body">
                     <table class="table table-bordered table-striped">
                         <thead>
@@ -213,11 +213,3 @@
 
     </div>
 </div>
-
-
-
-
-
-
-
-
