--- a/ForeScore.WebMVC/Views/Shared/_Layout.cshtml
+++ b/ForeScore.WebMVC/Views/Shared/_Layout.cshtml
@@ -18,6 +18,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
                 </button>
                 @Html.ActionLink("ForeScore", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
@@ -28,6 +29,7 @@
                     <li>@Html.ActionLink("Courses", "Index", "Course")</li>
                     <li>@Html.ActionLink("Tee Times", "Index", "TeeTime")</li>
                     <li>@Html.ActionLink("Social", "Index", "Follow")</li>
+                    <li>@Html.ActionLink("Feed", "Index", "Post")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
