--- a/ForeScore.WebMVC/Views/Home/Index.cshtml
+++ b/ForeScore.WebMVC/Views/Home/Index.cshtml
@@ -3,29 +3,38 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h2>ForeScore</h2>
+    <p class="lead">ForeScore is a web application that will allow golfers to log their rounds, view their statistics to see how they can improve on their game, connect with friends and manage their tee times. This application will serve as a home for golf hobbyists and enthusiasts to manage all things golf!</p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>Add A Course</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            Begin by adding a few courses to your courses index. That way you can log your rounds and share your stats with Friends!
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p>
+            <a href="/Course/Create" class="btn btn-success btn-block">
+                Add A New Course
+            </a>
+        </p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>Find a Friend</h2>
+        <p>Find a friend to follow in order to view their posts and profile</p>
+        <p>
+            <a href="/Index/Follow" class="btn btn-success btn-block">
+                Manage Follows
+            </a>
+        </p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>Manage Tee Times</h2>
+        <p>You can easily manage your upcoming tee times and view your recent tee times by visiting the "Tee Time" page.</p>
+        <p>
+            <a href="/Course/Create" class="btn btn-success btn-block">
+                View Tee Times
+            </a>
+        </p>
     </div>
 </div>
