--- a/ForeScore.WebMVC/Content/Site.css
+++ b/ForeScore.WebMVC/Content/Site.css
@@ -39,7 +39,6 @@ textarea {
     font-weight: bold;
 }
 
-
 .textboxform-control {
     width: 4em;
 }
@@ -70,8 +69,10 @@ textarea {
     border: 15px;
     border-color: red;
 }
-.navbar-header {
+.navbar-brand {
     color: #122778;
+    font-family: Baskerville,Times,'Times New Roman',serif;
+    font-weight: bold;
 }
 
 
