--- a/ForeScore.WebMVC/Content/bootstrap.css
+++ b/ForeScore.WebMVC/Content/bootstrap.css
@@ -4973,6 +4973,19 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
     list-style: none;
 }
 
+.nav .navbar-nav {
+   color: white;
+}
+
+
+.nav .navbar-nav .navbar-right {
+    color: white;
+}
+
+.navbar-collapse .collapse{
+    background-color: mediumblue;
+}
+
     .nav > li {
         position: relative;
         display: block;
@@ -5595,7 +5608,6 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 
 .navbar-default {
-
 }
 
     .navbar-default .navbar-brand {
@@ -5695,6 +5707,11 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
         color: #333;
     }
 
+.navbar-brand{
+    color: white;
+    font-family: Georgia, serif;
+}
+
 .navbar-default .btn-link {
     color: #122778;
 }
@@ -5711,14 +5728,26 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
         color: #ccc;
     }
 
+#navigation-full {
+    background-color: #39C0ED;
+    border-color: #39C0ED;
+}
+
+#navigation-inputs {
+    color: white;
+    font-family: Georgia, serif;
+}
+
 .navbar-inverse {
-    background-color: #222;
-    border-color: #080808;
+    background-color: white;
+    border-color: white;
 }
 
     .navbar-inverse .navbar-brand {
-        color: #9d9d9d;
+        color: white;
     }
+
+
 
         .navbar-inverse .navbar-brand:hover,
         .navbar-inverse .navbar-brand:focus {
