--- a/ForeScore.WebMVC/Views/Shared/_Layout.cshtml
+++ b/ForeScore.WebMVC/Views/Shared/_Layout.cshtml
@@ -9,9 +9,9 @@
 
 </head>
 <body>
-    <div class="navbar-background">
+    <div id="navigation-full">
         <div class="container">
-            <div class="navbar-header">
+            <div id="navigation-inputs">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -24,12 +24,12 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("My Profile", "Index", "UserCareer")</li>
-                    <li>@Html.ActionLink("Rounds", "Index", "Round")</li>
-                    <li>@Html.ActionLink("Courses", "Index", "Course")</li>
-                    <li>@Html.ActionLink("Tee Times", "Index", "TeeTime")</li>
-                    <li>@Html.ActionLink("Social", "Index", "Follow")</li>
-                    <li>@Html.ActionLink("Feed", "Index", "Post")</li>
+                    <li>@Html.ActionLink("My Profile", "Index", "UserCareer", new { @class = "navbar-brand" })</li>
+                    <li>@Html.ActionLink("Rounds", "Index", "Round", new { @class = "navbar-brand" })</li>
+                    <li>@Html.ActionLink("Courses", "Index", "Course", new { @class = "navbar-brand" })</li>
+                    <li>@Html.ActionLink("Tee Times", "Index", "TeeTime", new { @class = "navbar-brand" })</li>
+                    <li>@Html.ActionLink("Social", "Index", "Follow", new { @class = "navbar-brand" })</li>
+                    <li>@Html.ActionLink("Feed", "Index", "Post", new { @class = "navbar-brand" })</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
