--- a/ForeScore.WebMVC/Views/Follow/Index.cshtml
+++ b/ForeScore.WebMVC/Views/Follow/Index.cshtml
@@ -43,7 +43,7 @@
                                     <td class="index">
                                         <a href="@Url.Action("Delete", "Follow", new { id = Model.Following[i].FollowingId})"
                                             class="btn btn-block btn-warning">
-                                            Details Follow
+                                            View Profile/Remove Follow
                                         </a>
                                     </td>
                                 </tr>
