--- a/ForeScore.WebMVC/Views/UserCareer/Index.cshtml
+++ b/ForeScore.WebMVC/Views/UserCareer/Index.cshtml
@@ -22,7 +22,7 @@
                         </dt>
 
                         <dd>
-                            @if (Model.Handicap == 0)
+                            @if (Model.Handicap == 0 || Model.Handicap == null)
                             {
                                 @String.Format("Not enough rounds logged for eligible handicap.")
                             }
